@@ -1,3 +1,8 @@
+2007-08-24  Michael Natterer  <mitch@imendio.com>
+
+	* glib/gslice.[ch]: make g_slice_copy() take a gconstpointer
+	instead of a gpointer.
+
 2007-08-22  Cody Russell  <bratsche@gnome.org>
 
 	* glib/gprintf.c: Document all printf functions to use
